<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Luis F. Cardona S.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.edu.itm.www.heatexchangercalculator.MainActivity"
    tools:showIn="@layout/activity_scrolling">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:columnCount="4"
        android:paddingBottom="15dp"
        android:rowCount="40">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/TipoIntercambiador"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="2"
            android:animateLayoutChanges="false"
            android:clipToPadding="false"
            android:padding="8dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:padding="4dp"
            android:text="@string/FluidoFrio"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:lines="2"
            android:padding="4dp"
            android:text="@string/FluidoCaliente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="6"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/Uintercambiador"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/coefU_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="7"
            android:max="1000"
            android:progress="640" />

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="14"
            android:padding="4dp"
            android:text="@string/TentradaFluidoFrio"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/temp_c_inletTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="14"
            android:text="@string/temp_c_inletInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/tc_ent_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="15"
            android:max="299"
            android:progress="20" />

        <SeekBar
            android:id="@+id/th_ent_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="13"
            android:max="299"
            android:progress="160" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="12"
            android:padding="4dp"
            android:text="@string/TentradaFluidoCaliente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="3"
            android:contentDescription="@string/imgContentDescription"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/temp_h_inletTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="12"
            android:text="@string/temp_h_inletInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:padding="4dp"
            android:text="@string/FlujoMasicoFluidoFrio"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/mf_coldflowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="8"
            android:text="@string/mf_coldFlowInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/mfcSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="9"
            android:max="190"
            android:progress="120" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="10"
            android:padding="4dp"
            android:text="@string/FlujoMasicoFluidoCaliente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/mf_hotflowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="10"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/mf_hotflowInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/mfhSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="11"
            android:max="190"
            android:progress="190" />

        <TextView
            android:id="@+id/coefU_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:text="@string/UcoefInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="18"
            android:textSize="18sp"
            android:spinnerMode="dialog" />

        <SeekBar
            android:id="@+id/datoConocido_SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="19"
            android:max="300"
            android:progress="80" />

        <TextView
            android:id="@+id/datoConocido_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="18"
            android:text="@string/datoConocidoInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="20"
            android:padding="4dp"
            android:text="@string/TsalidaFluidoFrio"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tempCOutlet_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="20"
            android:text="@string/tempCOutletInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="21"
            android:padding="4dp"
            android:text="@string/TsalidaFluidoCaliente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tempHOutlet_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="21"
            android:text="@string/tempHOutletInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/AsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="22"
            android:padding="4dp"
            android:text="@string/AreaSuperficial"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/Areasuperficial_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="23"
            android:padding="4dp"
            android:text="@string/NTUIntercambiador"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/NTU_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NTUinitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="24"
            android:padding="4dp"
            android:text="@string/Efectividad"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/efectividad_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="24"
            android:text="@string/EfectivididadInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="25"
            android:padding="4dp"
            android:text="@string/TransferenciaCalor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/QpuntoReal_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QpuntoRealInitialValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="26"
            android:padding="4dp"
            android:text="@string/CFlujoFrio"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="26"
            android:text="@string/textoPrueba"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="27"
            android:padding="4dp"
            android:text="@string/CFlujoCaliente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="27"
            android:text="@string/textoPrueba"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/ratioc_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="29"
            android:padding="4dp"
            android:paddingBottom="20dp"
            android:text="@string/CminCmax"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="29"
            android:text="@string/textoPrueba"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </GridLayout>
</android.support.v4.widget.NestedScrollView>
